--- a/templates/stores/partner_dashboard.html
+++ b/templates/stores/partner_dashboard.html
@@ -110,7 +110,7 @@
         }
 
         function helpArtisan(artisanId) {
-            alert(`Help feature for artisan ${artisanId} - would open support interface`);
+            alert(`Help feature for artisan ${artisanId}\n\nIn production, this would:\n- Open support chat interface\n- Show artisan contact information\n- Provide business guidance tools`);
         }
     </script>
 </body>
